fix: 将jdk版本调整为17，并修正了一些21版本的方法调用